已知BUG修复、小细节优化

--- a/src/main/resources/templates/EmailRegisterSuccessTemplate.html
+++ b/src/main/resources/templates/EmailRegisterSuccessTemplate.html
@@ -15,7 +15,7 @@
       <tr>
         <th valign="middle"
             style="height: 25px; line-height: 25px; padding: 15px 35px; border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: #409EFF; background-color: #409EFF; border-top-left-radius: 5px; border-top-right-radius: 5px; border-bottom-right-radius: 0px; border-bottom-left-radius: 0px;">
-          <font face="微软雅黑" size="5" style="color: rgb(255, 255, 255); ">暴龙图库 - Picture</font>
+          <font face="微软雅黑" size="5" style="color: rgb(255, 255, 255); ">暴龙图库</font>
         </th>
       </tr>
       <tr>
@@ -25,38 +25,23 @@
             <h2 style="margin: 5px 0px; ">
               <font color="#333333" style="line-height: 20px; ">
                 <font style="line-height: 22px; " size="4">
-                  尊敬的访客：</font>
+                  注册成功：</font>
               </font>
             </h2>
             <!-- 中文 -->
             <p>
-              你好！感谢你对<span style="color: blue;">严先生博客</span>的支持，你提交的友情链接已收到，预计在<span
-              style="color: blue;">24小时</span>之内进行审核！
+              你好！感谢你注册 <a href="https://picture.baolong.icu">暴龙图库</a> ，您的初始密码为<span
+              style="color: red; font-weight: bold">12345678</span>，为了确保你的账号安全, 请尽快登录修改密码！
             </p>
-            <p>
-              你也可以添加博主的联系方式：<span style="color: blue;">QQ：510132075</span>、<span style="color: blue;">微信：YZ510132075</span>。
-            </p><br>
-            <!-- 英文 -->
-            <h2 style="margin: 5px 0px; ">
-              <font color="#333333" style="line-height: 20px; ">
-                <font style="line-height: 22px; " size="4">
-                  Dear visitors:</font>
-              </font>
-            </h2>
-            <p>
-              Hello! Thank you for your support for <span style="color: blue;">Mr. Yan's blog</span>. The friendship
-              link you submitted has been received and is expected to be reviewed within 24 hours!
-            </p>
-            <p>
-              You can also add the blogger's contact information: <span style="color: blue;">QQ: 510132075</span>, <span
-              style="color: blue;">WeChat: YZ510132075</span>.
-            </p>
+            <br>
+
             <div style="width:100%;margin:0 auto;">
               <div
                 style="padding:10px 10px 0;border-top:1px solid #ccc;color:#747474;margin-bottom:20px;line-height:1.3em;font-size:12px;">
-                <p>暴龙先生</p>
-                <p>联系我：QQ 510132075&nbsp;&nbsp;&nbsp;&nbsp;微信-YZ510132075</p>
-                <p>联系邮箱：ysirblog@foxmail.com</p>
+                <p>Silas Yan</p>
+                <p>Q Q: 510132075</p>
+                <p>微信: JasonYanze</p>
+                <p>联系邮箱：510132075@qq.com</p>
                 <br>
                 <p>此为系统邮件，请勿回复<br>
                   Please do not reply to this system email
