--- a/src/main/resources/templates/EmailReviewTemplate.html
+++ b/src/main/resources/templates/EmailReviewTemplate.html
@@ -25,13 +25,12 @@
             <h2 style="margin: 5px 0px; ">
               <font color="#333333" style="line-height: 20px; ">
                 <font style="line-height: 22px; " size="4">
-                  注册操作：</font>
+                  审核通知：</font>
               </font>
             </h2>
             <!-- 中文 -->
             <p>
-              你好！你正在注册 <a href="https://picture.baolong.icu">暴龙图库</a> ，你的验证码为
-              <span style="font-size: 20px">BOOT_code_END</span>，验证码有效时间<span style="color: red">5分钟</span>！
+              你好！您上传的图片，<span style="color: red; font-weight: bold">BOOT_reviewStatus_END</span>！
             </p>
             <br>
 
